sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:6: error: '(' expected but identifier found.
    if !(plusPetit(i,j)){
       ^AlgBubbleSort1:10: error: illegal start of simple expression
  }
  ^